--- a/index.html
+++ b/index.html
@@ -5,29 +5,58 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>FreeMC</title>
   <script src="https://cdn.tailwindcss.com"></script>
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <style>
     .transition-scale { transition: transform 0.3s ease; }
-    .transition-scale:hover { transform: scale(1.03); }
+    .transition-scale:hover { transform: scale(1.02); }
+    .material-icons { font-size: 24px; }
+    .tooltip::after {
+      content: attr(data-tip);
+      position: absolute;
+      background: #333;
+      color: white;
+      padding: 4px 8px;
+      font-size: 12px;
+      border-radius: 4px;
+      top: 50%;
+      left: 100%;
+      transform: translateY(-50%);
+      white-space: nowrap;
+      opacity: 0;
+      transition: opacity 0.2s ease;
+      pointer-events: none;
+    }
+    .tooltip:hover::after {
+      opacity: 1;
+    }
   </style>
 </head>
 <body class="bg-gray-950 text-white">
 
   <div class="flex h-screen">
-    <aside class="w-48 bg-gray-900 p-4 space-y-4">
-      <button class="tab w-full text-left py-2 px-3 rounded hover:bg-gray-700" data-type="worlds">Worlds</button>
-      <button class="tab w-full text-left py-2 px-3 rounded hover:bg-gray-700" data-type="addons">Addons</button>
-      <button class="tab w-full text-left py-2 px-3 rounded hover:bg-gray-700" data-type="textures">Textures</button>
-      <button class="tab w-full text-left py-2 px-3 rounded hover:bg-gray-700" data-type="skins">Skins</button>
-    </aside>
 
-    <main class="flex-1 p-6 overflow-auto">
-      <div class="flex justify-between items-center mb-4">
-        <h1 id="section-title" class="text-2xl font-bold capitalize">Worlds</h1>
-        <div class="relative">
-          <button id="search-toggle" class="p-2 rounded-full hover:bg-gray-800">🔍</button>
-          <input id="search-input" type="text" placeholder="Search..." class="absolute right-0 top-full mt-2 bg-gray-800 text-white px-3 py-1 rounded shadow hidden" />
-        </div>
+    <aside class="w-16 bg-gray-900 m-2 rounded-2xl p-3 flex flex-col items-center space-y-4">
+      <button class="tab tooltip" data-type="worlds" data-tip="Worlds">
+        <span class="material-icons">public</span>
+      </button>
+      <button class="tab tooltip" data-type="addons" data-tip="Addons">
+        <span class="material-icons">extension</span>
+      </button>
+      <button class="tab tooltip" data-type="textures" data-tip="Textures">
+        <span class="material-icons">palette</span>
+      </button>
+      <button class="tab tooltip" data-type="skins" data-tip="Skins">
+        <span class="material-icons">face</span>
+      </button>
+    </aside>
+]
+    <main class="flex-1 p-4">
+      <div id="search-container" class="transition-all duration-300 mb-6">
+        <input id="search-input" type="text" placeholder="Search..."
+               class="w-full text-white bg-gray-800 px-4 py-3 rounded-xl shadow-lg focus:outline-none focus:ring-2 focus:ring-blue-500" />
       </div>
+
+      <h1 id="section-title" class="text-2xl font-bold capitalize mb-4">Worlds</h1>
 
       <div id="grid" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6"></div>
       <div id="no-results" class="text-gray-400 text-center mt-8 hidden">No results found.</div>
@@ -41,7 +70,6 @@
     const tabs = document.querySelectorAll('.tab');
     const sectionTitle = document.getElementById('section-title');
     const grid = document.getElementById('grid');
-    const searchToggle = document.getElementById('search-toggle');
     const searchInput = document.getElementById('search-input');
     const noResults = document.getElementById('no-results');
 
@@ -49,15 +77,10 @@
       tab.addEventListener('click', () => {
         currentTab = tab.dataset.type;
         sectionTitle.textContent = currentTab;
-        tabs.forEach(t => t.classList.remove('bg-gray-800'));
-        tab.classList.add('bg-gray-800');
+        tabs.forEach(t => t.classList.remove('bg-gray-700'));
+        tab.classList.add('bg-gray-700');
         renderGrid();
       });
-    });
-
-    searchToggle.addEventListener('click', () => {
-      searchInput.classList.toggle('hidden');
-      if (!searchInput.classList.contains('hidden')) searchInput.focus();
     });
 
     searchInput.addEventListener('input', renderGrid);
@@ -69,13 +92,19 @@
     function createCard(item) {
       return `
         <div class="bg-gray-800 rounded-2xl overflow-hidden shadow-lg transition-scale">
-          <img src="${item.banner}" alt="${item.title}" class="w-full h-40 object-cover" />
+          <img src="${item.banner}" alt="${item.title}" class="w-full h-40 object-contain bg-black" />
           <div class="p-4">
             <h2 class="text-xl font-semibold mb-2">${item.title}</h2>
             <p class="text-gray-300 text-sm mb-4">${truncate(item.desc)}</p>
             <div class="flex space-x-2">
-              <a href="${item.download}" target="_blank" class="bg-blue-500 hover:bg-blue-600 text-white px-4 py-1 rounded">Download</a>
-              <a href="${item.marketplace}" target="_blank" class="bg-yellow-500 hover:bg-yellow-600 text-white px-4 py-1 rounded">Marketplace</a>
+              <a href="${item.download}" target="_blank"
+                 class="bg-blue-500 hover:bg-blue-600 text-white px-4 py-1 rounded flex items-center space-x-1">
+                <span class="material-icons">download</span><span>Download</span>
+              </a>
+              <a href="${item.marketplace}" target="_blank"
+                 class="bg-yellow-500 hover:bg-yellow-600 text-white px-4 py-1 rounded flex items-center space-x-1">
+                <span class="material-icons">storefront</span><span>Marketplace</span>
+              </a>
             </div>
           </div>
         </div>
