--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
     .transition-scale { transition: transform 0.3s ease; }
     .transition-scale:hover { transform: scale(1.02); }
     .material-icons { font-size: 24px; }
+    .tooltip {
+      position: relative;
+      display: inline-block;
+    }
     .tooltip::after {
       content: attr(data-tip);
       position: absolute;
@@ -25,6 +29,7 @@
       opacity: 0;
       transition: opacity 0.2s ease;
       pointer-events: none;
+      margin-left: 8px;
     }
     .tooltip:hover::after {
       opacity: 1;
@@ -34,8 +39,8 @@
 <body class="bg-gray-950 text-white">
 
   <div class="flex h-screen">
-
-    <aside class="w-16 bg-gray-900 m-2 rounded-2xl p-3 flex flex-col items-center space-y-4">
+    <!-- Sidebar -->
+    <aside class="w-16 bg-gray-900 m-2 rounded-2xl p-4 flex flex-col items-center space-y-6">
       <button class="tab tooltip" data-type="worlds" data-tip="Worlds">
         <span class="material-icons">public</span>
       </button>
@@ -46,10 +51,10 @@
         <span class="material-icons">palette</span>
       </button>
       <button class="tab tooltip" data-type="skins" data-tip="Skins">
-        <span class="material-icons">face</span>
+        <span class="material-icons">checkroom</span>
       </button>
     </aside>
-]
+
     <main class="flex-1 p-4">
       <div id="search-container" class="transition-all duration-300 mb-6">
         <input id="search-input" type="text" placeholder="Search..."
@@ -92,7 +97,7 @@
     function createCard(item) {
       return `
         <div class="bg-gray-800 rounded-2xl overflow-hidden shadow-lg transition-scale">
-          <img src="${item.banner}" alt="${item.title}" class="w-full h-40 object-contain bg-black" />
+          <img src="${item.banner}" alt="${item.title}" class="w-full h-40 object-cover bg-black" />
           <div class="p-4">
             <h2 class="text-xl font-semibold mb-2">${item.title}</h2>
             <p class="text-gray-300 text-sm mb-4">${truncate(item.desc)}</p>
