--- a/index.html
+++ b/index.html
@@ -43,23 +43,23 @@
       border-radius: 0.75rem;
     }
     .tab:hover .material-icons {
-      color: #38bdf8;
+      color: #60a5fa;
     }
     .tab.active .material-icons {
-      color: rgba(59, 130, 246, 0.7);
+      color: rgba(59, 130, 246, 0.6);
     }
 
     .background-polaris {
       background: repeating-linear-gradient(
-        45deg,
+        135deg,
         #0f172a 0px,
         #0f172a 1px,
-        rgba(255, 255, 255, 0.05) 1px,
-        rgba(255, 255, 255, 0.05) 2px,
+        rgba(51, 65, 85, 0.1) 1px,
+        rgba(51, 65, 85, 0.1) 2px,
         #0f172a 2px,
         #0f172a 18px,
-        rgba(255, 255, 255, 0.1) 18px,
-        rgba(255, 255, 255, 0.1) 19px,
+        rgba(51, 65, 85, 0.2) 18px,
+        rgba(51, 65, 85, 0.2) 19px,
         #0f172a 19px,
         #0f172a 35px
       );
@@ -69,7 +69,7 @@
       position: absolute;
       width: 6px;
       height: 6px;
-      background-color: rgba(255, 255, 255, 0.15);
+      background-color: rgba(100, 116, 139, 0.15);
       border-radius: 9999px;
       animation: floatUp 12s linear infinite;
     }
