--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>FreeMC</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link rel="icon" href="https://i.ibb.co/PZqhhj9Y/Minecoin-Logo-removebg-preview.png" type="image/png">
   <style>
     .transition-scale { transition: transform 0.3s ease; }
     .transition-scale:hover { transform: scale(1.02); }
@@ -43,23 +44,23 @@
       border-radius: 0.75rem;
     }
     .tab:hover .material-icons {
-      color: #60a5fa;
+      color: #38bdf8;
     }
     .tab.active .material-icons {
-      color: rgba(59, 130, 246, 0.6);
+      color: rgba(96, 165, 250, 0.6);
     }
 
     .background-polaris {
       background: repeating-linear-gradient(
-        135deg,
+        45deg,
         #0f172a 0px,
         #0f172a 1px,
-        rgba(51, 65, 85, 0.1) 1px,
-        rgba(51, 65, 85, 0.1) 2px,
+        rgba(13,19,33) 1px,
+        rgba(13,19,33) 2px,
         #0f172a 2px,
         #0f172a 18px,
-        rgba(51, 65, 85, 0.2) 18px,
-        rgba(51, 65, 85, 0.2) 19px,
+        rgba(13,19,33) 18px,
+        rgba(13,19,33) 19px,
         #0f172a 19px,
         #0f172a 35px
       );
@@ -69,7 +70,7 @@
       position: absolute;
       width: 6px;
       height: 6px;
-      background-color: rgba(100, 116, 139, 0.15);
+      background-color: rgba(255, 255, 255, 0.08);
       border-radius: 9999px;
       animation: floatUp 12s linear infinite;
     }
