--- a/index.html
+++ b/index.html
@@ -91,7 +91,6 @@
   </style>
 </head>
 <body class="relative text-white">
-
   <div class="absolute inset-0 z-[-1] background-polaris overflow-hidden">
     <div class="dot" style="left: 5%; animation-delay: 0s;"></div>
     <div class="dot" style="left: 15%; animation-delay: 1s;"></div>
@@ -163,7 +162,8 @@
     function createCard(item) {
       return `
         <div class="bg-gray-800 rounded-2xl overflow-hidden shadow-lg transition-scale animate-fade-in">
-          <img src="${item.banner}" alt="${item.title}" class="w-full h-64 object-cover bg-black" />
+          <img src="${item.banner}" alt="${item.title}"
+               class="w-full h-auto max-h-64 object-contain bg-black mx-auto" />
           <div class="p-4">
             <h2 class="text-xl font-semibold mb-2">${item.title}</h2>
             <p class="text-gray-300 text-sm mb-4">${truncate(item.desc)}</p>
