--- a/index.html
+++ b/index.html
@@ -8,11 +8,6 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link rel="icon" href="https://i.ibb.co/PZqhhj9Y/Minecoin-Logo-removebg-preview.png" type="image/png">
   <style>
-    html, body {
-      min-height: 100%;
-      height: auto;
-    }
-
     .transition-scale { transition: transform 0.3s ease; }
     .transition-scale:hover { transform: scale(1.02); }
 
@@ -69,7 +64,6 @@
         #0f172a 19px,
         #0f172a 35px
       );
-      min-height: 100vh;
     }
 
     .dot {
@@ -168,17 +162,17 @@
     function createCard(item) {
       return `
         <div class="bg-gray-800 rounded-2xl overflow-hidden shadow-lg transition-scale animate-fade-in flex flex-col justify-between">
-          <img src="${item.banner}" alt="${item.title}" class="w-full h-64 object-cover bg-black" />
+          <img src="${item.banner}" alt="${item.title}" class="w-full object-contain bg-black max-h-80" />
           <div class="p-4 flex flex-col flex-grow">
             <h2 class="text-xl font-semibold mb-2">${item.title}</h2>
             <p class="text-gray-300 text-sm mb-4 flex-grow">${truncate(item.desc)}</p>
-            <div class="flex flex-col sm:flex-row sm:space-x-2 space-y-2 sm:space-y-0 w-full">
+            <div class="flex flex-col sm:flex-row sm:space-x-2 space-y-2 sm:space-y-0">
               <a href="${item.download}" target="_blank"
-                 class="bg-blue-500 hover:bg-blue-600 text-white px-4 py-2 rounded flex justify-center items-center space-x-1 w-full">
+                 class="bg-blue-500 hover:bg-blue-600 text-white px-4 py-2 rounded flex justify-center items-center space-x-1">
                 <span class="material-icons">download</span><span>Download</span>
               </a>
               <a href="${item.marketplace}" target="_blank"
-                 class="bg-yellow-500 hover:bg-yellow-600 text-white px-4 py-2 rounded flex justify-center items-center space-x-1 w-full">
+                 class="bg-yellow-500 hover:bg-yellow-600 text-white px-4 py-2 rounded flex justify-center items-center space-x-1">
                 <span class="material-icons">storefront</span><span>Marketplace</span>
               </a>
             </div>
@@ -197,7 +191,7 @@
       noResults.classList.toggle('hidden', items.length > 0);
     }
 
-    fetch('https://free-marketplce.netlify.app/api.json')
+    fetch('./api.json')
       .then(res => res.json())
       .then(data => {
         allData = data;
