--- a/index.html
+++ b/index.html
@@ -133,6 +133,14 @@
     </main>
   </div>
 
+<div class="fixed bottom-0 left-0 w-full bg-gray-900 text-white text-center py-3 text-sm z-40 shadow-inner flex justify-center items-center space-x-2">
+  <span class="material-icons text-blue-400">lightbulb</span>
+  <span>
+    Have A Suggestions? <a href="https://form.typeform.com/to/UyA2yq19" target="_blank" class="text-blue-400 underline hover:text-blue-300">Let us know here</a>.
+  </span>
+</div>
+
+
   <script>
     let currentTab = 'worlds';
     let allData = {};
