--- a/index.html
+++ b/index.html
@@ -4,94 +4,14 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>FreeMC</title>
-  <script src="https://cdn.tailwindcss.com"></script>
+  <link href="https://cdn.tailwindcss.com" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <link rel="icon" href="https://i.ibb.co/PZqhhj9Y/Minecoin-Logo-removebg-preview.png" type="image/png">
-  <style>
-    .transition-scale { transition: transform 0.3s ease; }
-    .transition-scale:hover { transform: scale(1.02); }
-
-    .material-icons { font-size: 24px; transition: color 0.3s ease; }
-
-    .tooltip {
-      position: relative;
-      display: inline-block;
-    }
-    .tooltip::after {
-      content: attr(data-tip);
-      position: absolute;
-      background: #333;
-      color: white;
-      padding: 4px 8px;
-      font-size: 12px;
-      border-radius: 4px;
-      top: 50%;
-      left: 100%;
-      transform: translateY(-50%);
-      white-space: nowrap;
-      opacity: 0;
-      transition: opacity 0.2s ease;
-      pointer-events: none;
-      margin-left: 8px;
-    }
-    .tooltip:hover::after {
-      opacity: 1;
-    }
-
-    .tab {
-      transition: all 0.3s ease;
-      padding: 0.75rem;
-      border-radius: 0.75rem;
-    }
-    .tab:hover .material-icons {
-      color: #38bdf8;
-    }
-    .tab.active .material-icons {
-      color: rgba(96, 165, 250, 0.6);
-    }
-
-    .background-polaris {
-      background: repeating-linear-gradient(
-        45deg,
-        #0f172a 0px,
-        #0f172a 1px,
-        rgba(13,19,33) 1px,
-        rgba(13,19,33) 2px,
-        #0f172a 2px,
-        #0f172a 18px,
-        rgba(13,19,33) 18px,
-        rgba(13,19,33) 19px,
-        #0f172a 19px,
-        #0f172a 35px
-      );
-    }
-
-    .dot {
-      position: absolute;
-      width: 6px;
-      height: 6px;
-      background-color: rgba(255, 255, 255, 0.08);
-      border-radius: 9999px;
-      animation: floatUp 12s linear infinite;
-    }
-
-    @keyframes floatUp {
-      0% {
-        transform: translateY(100vh) scale(0.5);
-        opacity: 0;
-      }
-      50% {
-        opacity: 1;
-      }
-      100% {
-        transform: translateY(-100px) scale(1);
-        opacity: 0;
-      }
-    }
-  </style>
+  <link rel="icon" href="assets/images/Minecoin-Logo-removebg-preview.png" type="image/png">
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body class="relative text-white min-h-screen">
   <div class="absolute inset-0 z-[-1] background-polaris overflow-hidden">
+    <!-- Starry background animation here -->
     <div class="dot" style="left: 5%; animation-delay: 0s;"></div>
     <div class="dot" style="left: 15%; animation-delay: 1s;"></div>
     <div class="dot" style="left: 25%; animation-delay: 2s;"></div>
@@ -106,6 +26,7 @@
 
   <div class="flex flex-col md:flex-row min-h-screen">
     <aside class="w-full md:w-20 bg-gray-800 m-4 rounded-3xl p-6 flex md:flex-col flex-row items-center justify-around md:space-y-10 space-x-6 md:space-x-0 shadow-lg">
+      <!-- Sidebar Buttons -->
       <button class="tab tooltip" data-type="worlds" data-tip="Worlds">
         <span class="material-icons">public</span>
       </button>
@@ -122,8 +43,7 @@
 
     <main class="flex-1 p-4">
       <div id="search-container" class="transition-all duration-300 mb-6">
-        <input id="search-input" type="text" placeholder="Search..."
-               class="w-full text-white bg-gray-800 px-4 py-3 rounded-xl shadow-lg focus:outline-none focus:ring-2 focus:ring-blue-500" />
+        <input id="search-input" type="text" placeholder="Search..." class="w-full text-white bg-gray-800 px-4 py-3 rounded-xl shadow-lg focus:outline-none focus:ring-2 focus:ring-blue-500" />
       </div>
 
       <h1 id="section-title" class="text-2xl font-bold capitalize mb-4">Worlds</h1>
@@ -133,84 +53,13 @@
     </main>
   </div>
 
-<div class="relative w-full bg-gray-900 text-white text-center py-3 text-sm z-40 shadow-inner flex justify-center items-center space-x-2 mt-10">
-  <span class="material-icons text-blue-400">lightbulb</span>
-  <span>
-    Have suggestions? <a href="https://form.typeform.com/to/UyA2yq19" target="_blank" class="text-blue-400 underline hover:text-blue-300">Let us know here</a>.
-  </span>
-</div>
+  <div class="relative w-full bg-gray-900 text-white text-center py-3 text-sm z-40 shadow-inner flex justify-center items-center space-x-2 mt-10">
+    <span class="material-icons text-blue-400">lightbulb</span>
+    <span>
+      Have suggestions? <a href="https://form.typeform.com/to/UyA2yq19" target="_blank" class="text-blue-400 underline hover:text-blue-300">Let us know here</a>.
+    </span>
+  </div>
 
-
-
-  <script>
-    let currentTab = 'worlds';
-    let allData = {};
-
-    const tabs = document.querySelectorAll('.tab');
-    const sectionTitle = document.getElementById('section-title');
-    const grid = document.getElementById('grid');
-    const searchInput = document.getElementById('search-input');
-    const noResults = document.getElementById('no-results');
-
-    tabs.forEach(tab => {
-      tab.addEventListener('click', () => {
-        currentTab = tab.dataset.type;
-        sectionTitle.textContent = currentTab;
-        tabs.forEach(t => t.classList.remove('active'));
-        tab.classList.add('active');
-        renderGrid();
-      });
-    });
-
-    searchInput.addEventListener('input', renderGrid);
-
-    function truncate(text, max = 100) {
-      return text.length > max ? text.slice(0, max) + '...' : text;
-    }
-
-    function createCard(item) {
-      return `
-        <div class="bg-gray-800 rounded-2xl overflow-hidden shadow-lg transition-scale animate-fade-in flex flex-col justify-between">
-          <img src="${item.banner}" alt="${item.title}" class="w-full object-contain bg-black max-h-80" />
-          <div class="p-4 flex flex-col flex-grow">
-            <h2 class="text-xl font-semibold mb-2">${item.title}</h2>
-            <p class="text-gray-300 text-sm mb-4 flex-grow">${truncate(item.desc)}</p>
-            <div class="flex flex-col sm:flex-row sm:space-x-2 space-y-2 sm:space-y-0">
-              <a href="${item.download}" target="_blank"
-                 class="bg-blue-500 hover:bg-blue-600 text-white px-4 py-2 rounded flex justify-center items-center space-x-1">
-                <span class="material-icons">download</span><span>Download</span>
-              </a>
-              <a href="${item.marketplace}" target="_blank"
-                 class="bg-yellow-500 hover:bg-yellow-600 text-white px-4 py-2 rounded flex justify-center items-center space-x-1">
-                <span class="material-icons">storefront</span><span>Marketplace</span>
-              </a>
-            </div>
-          </div>
-        </div>
-      `;
-    }
-
-    function renderGrid() {
-      const items = (allData[currentTab] || []).filter(item => {
-        const q = searchInput.value.toLowerCase();
-        return item.title.toLowerCase().includes(q) || item.desc.toLowerCase().includes(q);
-      });
-
-      grid.innerHTML = items.map(createCard).join('');
-      noResults.classList.toggle('hidden', items.length > 0);
-    }
-
-    fetch('./api.json')
-      .then(res => res.json())
-      .then(data => {
-        allData = data;
-        renderGrid();
-        document.querySelector(`.tab[data-type="${currentTab}"]`).classList.add('active');
-      })
-      .catch(err => {
-        grid.innerHTML = `<div class="text-red-500">Failed to load API.</div>`;
-        console.error(err);
-      });
-  </script>
+  <script src="js/script.js"></script>
 </body>
 </html>
