--- a/index.html
+++ b/index.html
@@ -7,11 +7,10 @@
   <link href="https://cdn.tailwindcss.com" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link rel="icon" href="assets/images/Minecoin-Logo-removebg-preview.png" type="image/png">
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="CSS/style.css">
 </head>
 <body class="relative text-white min-h-screen">
   <div class="absolute inset-0 z-[-1] background-polaris overflow-hidden">
-    <!-- Starry background animation here -->
     <div class="dot" style="left: 5%; animation-delay: 0s;"></div>
     <div class="dot" style="left: 15%; animation-delay: 1s;"></div>
     <div class="dot" style="left: 25%; animation-delay: 2s;"></div>
@@ -26,7 +25,6 @@
 
   <div class="flex flex-col md:flex-row min-h-screen">
     <aside class="w-full md:w-20 bg-gray-800 m-4 rounded-3xl p-6 flex md:flex-col flex-row items-center justify-around md:space-y-10 space-x-6 md:space-x-0 shadow-lg">
-      <!-- Sidebar Buttons -->
       <button class="tab tooltip" data-type="worlds" data-tip="Worlds">
         <span class="material-icons">public</span>
       </button>
@@ -60,6 +58,6 @@
     </span>
   </div>
 
-  <script src="js/script.js"></script>
+  <script src="JS/script.js"></script>
 </body>
 </html>
