--- a/index.html
+++ b/index.html
@@ -10,13 +10,8 @@
   <style>
     .transition-scale { transition: transform 0.3s ease; }
     .transition-scale:hover { transform: scale(1.02); }
-
     .material-icons { font-size: 24px; transition: color 0.3s ease; }
-
-    .tooltip {
-      position: relative;
-      display: inline-block;
-    }
+    .tooltip { position: relative; display: inline-block; }
     .tooltip::after {
       content: attr(data-tip);
       position: absolute;
@@ -34,22 +29,10 @@
       pointer-events: none;
       margin-left: 8px;
     }
-    .tooltip:hover::after {
-      opacity: 1;
-    }
-
-    .tab {
-      transition: all 0.3s ease;
-      padding: 0.75rem;
-      border-radius: 0.75rem;
-    }
-    .tab:hover .material-icons {
-      color: #38bdf8;
-    }
-    .tab.active .material-icons {
-      color: rgba(96, 165, 250, 0.6);
-    }
-
+    .tooltip:hover::after { opacity: 1; }
+    .tab { transition: all 0.3s ease; padding: 0.75rem; border-radius: 0.75rem; }
+    .tab:hover .material-icons { color: #38bdf8; }
+    .tab.active .material-icons { color: rgba(96, 165, 250, 0.6); }
     .background-polaris {
       background: repeating-linear-gradient(
         45deg,
@@ -65,7 +48,6 @@
         #0f172a 35px
       );
     }
-
     .dot {
       position: absolute;
       width: 6px;
@@ -74,21 +56,11 @@
       border-radius: 9999px;
       animation: floatUp 12s linear infinite;
     }
-
     @keyframes floatUp {
-      0% {
-        transform: translateY(100vh) scale(0.5);
-        opacity: 0;
-      }
-      50% {
-        opacity: 1;
-      }
-      100% {
-        transform: translateY(-100px) scale(1);
-        opacity: 0;
-      }
+      0% { transform: translateY(100vh) scale(0.5); opacity: 0; }
+      50% { opacity: 1; }
+      100% { transform: translateY(-100px) scale(1); opacity: 0; }
     }
-
     .carousel-dot {
       width: 10px;
       height: 10px;
@@ -99,64 +71,29 @@
       cursor: pointer;
       transition: background-color 0.3s ease;
     }
-
-    .carousel-dot.active {
-      background-color: #38bdf8;
-    }
-
-    .carousel-dot:hover {
-      background-color: #60a5fa;
-    }
-
-    .card-buttons a:hover {
-      transform: scale(1.05);
-    }
+    .carousel-dot.active { background-color: #38bdf8; }
+    .carousel-dot:hover { background-color: #60a5fa; }
+    .card-buttons a:hover { transform: scale(1.05); }
+    .desc { max-height: 6rem; overflow: hidden; transition: max-height 0.3s ease; }
+    .desc.expanded { max-height: 500px; }
+    .fade-in { animation: fadeIn 0.5s ease forwards; opacity: 0; }
+    @keyframes fadeIn { to { opacity: 1; } }
+    .dropdown { position: absolute; top: 2rem; right: 0; background: #1f2937; border-radius: 0.5rem; box-shadow: 0 10px 15px rgba(0,0,0,0.2); display: none; flex-direction: column; overflow: hidden; z-index: 50; }
+    .dropdown.show { display: flex; animation: fadeIn 0.2s ease forwards; }
   </style>
 </head>
 <body class="relative text-white min-h-screen">
   <div class="absolute inset-0 z-[-1] background-polaris overflow-hidden">
-    <!-- Floating dots -->
-    <div class="dot" style="left: 5%; animation-delay: 0s;"></div>
-    <div class="dot" style="left: 15%; animation-delay: 1s;"></div>
-    <div class="dot" style="left: 25%; animation-delay: 2s;"></div>
-    <div class="dot" style="left: 35%; animation-delay: 3s;"></div>
-    <div class="dot" style="left: 45%; animation-delay: 4s;"></div>
-    <div class="dot" style="left: 55%; animation-delay: 2s;"></div>
-    <div class="dot" style="left: 65%; animation-delay: 3s;"></div>
-    <div class="dot" style="left: 75%; animation-delay: 1s;"></div>
-    <div class="dot" style="left: 85%; animation-delay: 0.5s;"></div>
-    <div class="dot" style="left: 95%; animation-delay: 2.5s;"></div>
   </div>
-
-  <div class="flex flex-col md:flex-row min-h-screen">
-    <aside class="w-full md:w-20 bg-gray-800 m-4 rounded-3xl p-6 flex md:flex-col flex-row items-center justify-around md:space-y-10 space-x-6 md:space-x-0 shadow-lg">
-      <button class="tab tooltip" data-type="worlds" data-tip="Worlds">
-        <span class="material-icons">public</span>
-      </button>
-      <button class="tab tooltip" data-type="addons" data-tip="Addons">
-        <span class="material-icons">extension</span>
-      </button>
-      <button class="tab tooltip" data-type="textures" data-tip="Textures">
-        <span class="material-icons">palette</span>
-      </button>
-      <button class="tab tooltip" data-type="skins" data-tip="Skins">
-        <span class="material-icons">checkroom</span>
-      </button>
-    </aside>
-
-    <main class="flex-1 p-4">
-      <div id="search-container" class="transition-all duration-300 mb-6">
-        <input id="search-input" type="text" placeholder="Search..."
-               class="w-full text-white bg-gray-800 px-4 py-3 rounded-xl shadow-lg focus:outline-none focus:ring-2 focus:ring-blue-500" />
-      </div>
-
-      <h1 id="section-title" class="text-2xl font-bold capitalize mb-4">Worlds</h1>
-
-      <div id="grid" class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6"></div>
-      <div id="no-results" class="text-gray-400 text-center mt-8 hidden">No results found.</div>
-    </main>
+  <div class="fixed top-4 right-4 z-50">
+    <button id="downloadToggle" class="text-white hover:text-blue-400">
+      <span class="material-icons">download</span>
+    </button>
+    <div id="downloadMenu" class="dropdown">
+      <a href="https://example.com/android" target="_blank" class="px-4 py-2 hover:bg-gray-700">Android</a>
+      <a href="https://example.com/iphone" target="_blank" class="px-4 py-2 hover:bg-gray-700">iPhone</a>
+    </div>
   </div>
-
   <div class="relative w-full bg-gray-900 text-white text-center py-3 text-sm z-40 shadow-inner flex justify-center items-center space-x-2 mt-10">
     <span class="material-icons text-blue-400">lightbulb</span>
     <span>
@@ -165,56 +102,30 @@
   </div>
 
   <script>
-    let currentTab = 'worlds';
-    let allData = JSON.parse(localStorage.getItem('freemcData')) || {};
-    const tabs = document.querySelectorAll('.tab');
-    const sectionTitle = document.getElementById('section-title');
-    const grid = document.getElementById('grid');
-    const searchInput = document.getElementById('search-input');
-    const noResults = document.getElementById('no-results');
-
-    tabs.forEach(tab => {
-      tab.addEventListener('click', () => {
-        currentTab = tab.dataset.type;
-        sectionTitle.textContent = currentTab;
-        tabs.forEach(t => t.classList.remove('active'));
-        tab.classList.add('active');
-        renderGrid();
-      });
+    const downloadToggle = document.getElementById('downloadToggle');
+    const downloadMenu = document.getElementById('downloadMenu');
+    document.addEventListener('click', e => {
+      if (downloadToggle.contains(e.target)) {
+        downloadMenu.classList.toggle('show');
+      } else if (!downloadMenu.contains(e.target)) {
+        downloadMenu.classList.remove('show');
+      }
     });
-
-    searchInput.addEventListener('input', renderGrid);
-
-    function truncate(text, max = 100) {
-      return text.length > max ? text.slice(0, max) + '...' : text;
-    }
-
-    function createCarousel(images = []) {
-      if (images.length === 0) return '';
-      const dots = images.map((_, i) => `<span class="carousel-dot" data-index="${i}"></span>`).join('');
-      return `
-        <div class="relative w-full overflow-hidden">
-          <img src="${images[0]}" class="carousel-img w-full object-contain bg-black max-h-80 rounded-t-2xl" />
-          <div class="absolute bottom-2 w-full text-center">${dots}</div>
-        </div>
-      `;
-    }
 
     function createCard(item) {
       const media = item.media || [item.banner];
       return `
-        <div class="bg-gray-800 rounded-2xl overflow-hidden shadow-lg transition-scale flex flex-col justify-between">
+        <div class="bg-gray-800 rounded-2xl overflow-hidden shadow-lg transition-scale flex flex-col justify-between fade-in">
           ${createCarousel(media)}
           <div class="p-4 flex flex-col flex-grow">
             <h2 class="text-xl font-semibold mb-2">${item.title}</h2>
-            <p class="text-gray-300 text-sm mb-4 flex-grow">${truncate(item.desc)}</p>
+            <p class="text-gray-300 text-sm mb-2 desc">${item.desc}</p>
+            <button class="text-blue-400 text-xs mb-2 toggle-desc">Show more</button>
             <div class="flex flex-col sm:flex-row sm:space-x-2 space-y-2 sm:space-y-0 card-buttons">
-              <a href="${item.download}" target="_blank"
-                 class="bg-blue-500 hover:bg-blue-600 text-white px-4 py-2 rounded flex justify-center items-center space-x-1 transition-transform">
+              <a href="${item.download}" target="_blank" class="bg-blue-500 hover:bg-blue-600 text-white px-4 py-2 rounded flex justify-center items-center space-x-1 transition-transform">
                 <span class="material-icons">download</span><span>Download</span>
               </a>
-              <a href="${item.marketplace}" target="_blank"
-                 class="bg-yellow-500 hover:bg-yellow-600 text-white px-4 py-2 rounded flex justify-center items-center space-x-1 transition-transform">
+              <a href="${item.marketplace}" target="_blank" class="bg-yellow-500 hover:bg-yellow-600 text-white px-4 py-2 rounded flex justify-center items-center space-x-1 transition-transform">
                 <span class="material-icons">storefront</span><span>Marketplace</span>
               </a>
             </div>
@@ -228,40 +139,17 @@
         const q = searchInput.value.toLowerCase();
         return item.title.toLowerCase().includes(q) || item.desc.toLowerCase().includes(q);
       });
-
       grid.innerHTML = items.map(createCard).join('');
       noResults.classList.toggle('hidden', items.length > 0);
 
-      document.querySelectorAll('.carousel-dot').forEach(dot => {
-        dot.addEventListener('click', function () {
-          const index = +this.dataset.index;
-          const container = this.closest('.relative');
-          const img = container.querySelector('.carousel-img');
-          const media = allData[currentTab].find(item =>
-            item.media && item.media.includes(img.src)
-          )?.media;
-
-          if (media && media[index]) {
-            img.src = media[index];
-            container.querySelectorAll('.carousel-dot').forEach(d => d.classList.remove('active'));
-            this.classList.add('active');
-          }
+      document.querySelectorAll('.toggle-desc').forEach(btn => {
+        btn.addEventListener('click', () => {
+          const desc = btn.previousElementSibling;
+          desc.classList.toggle('expanded');
+          btn.textContent = desc.classList.contains('expanded') ? 'Show less' : 'Show more';
         });
       });
     }
-
-    fetch('./api.json')
-      .then(res => res.json())
-      .then(data => {
-        allData = data;
-        localStorage.setItem('freemcData', JSON.stringify(data));
-        renderGrid();
-        document.querySelector(`.tab[data-type=\"${currentTab}\"]`).classList.add('active');
-      })
-      .catch(err => {
-        grid.innerHTML = `<div class=\"text-red-500\">Failed to load API.</div>`;
-        console.error(err);
-      });
   </script>
 </body>
 </html>
